<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        app:cardCornerRadius="3dp"
        app:cardElevation="3dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/world_wide_record"
                android:textAlignment="center"
                android:gravity="center_horizontal"
                android:textSize="18sp"
                android:padding="3dp"
                android:layout_margin="3dp"
                android:textColor="@color/black"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3"
                android:baselineAligned="false">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cases"
                        android:padding="4dp"
                        android:textSize="15sp"
                        android:textAlignment="center"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/number_of_cases"
                        android:id="@+id/idTVworldcases"
                        android:textColor="@color/blue"
                        android:textAlignment="center"
                        android:layout_gravity="center_horizontal"
                        android:padding="4dp"
                        android:textSize="12sp"
                        />

                </LinearLayout>
<LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/recovered_patient"
                        android:padding="4dp"
                        android:textSize="15sp"
                        android:textAlignment="center"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/number_of_recovered_patient"
                        android:textColor="@color/green"
                        android:id="@+id/idTVworldrecovered"
                        android:textAlignment="center"
                        android:layout_gravity="center_horizontal"
                        android:padding="4dp"
                        android:textSize="12sp"
                        />

                </LinearLayout>
<LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/deaths"
                        android:padding="4dp"
                        android:textSize="15sp"
                        android:textAlignment="center"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/number_of_deaths"
                        android:textColor="@color/red"
                        android:textAlignment="center"
                        android:id="@+id/idTVworldDeaths"
                        android:layout_gravity="center_horizontal"
                        android:padding="4dp"
                        android:textSize="12sp"
                        />

                </LinearLayout>

            </LinearLayout>


        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        app:cardCornerRadius="3dp"
        app:cardElevation="3dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/indian_record"
                android:textAlignment="center"
                android:gravity="center_horizontal"
                android:textSize="18sp"
                android:padding="3dp"
                android:layout_margin="3dp"
                android:textColor="@color/black"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3"
                android:baselineAligned="false">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cases"
                        android:padding="4dp"
                        android:textSize="15sp"
                        android:textAlignment="center"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/number_of_cases"
                        android:id="@+id/idTVindiacases"
                        android:textColor="@color/blue"
                        android:textAlignment="center"
                        android:layout_gravity="center_horizontal"
                        android:padding="4dp"
                        android:textSize="12sp"
                        />

                </LinearLayout>
<LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/recovered_patient"
                        android:padding="4dp"
                        android:textSize="15sp"
                        android:textAlignment="center"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/number_of_recovered_patient"
                        android:textColor="@color/green"
                        android:id="@+id/idTVindiarecovered"
                        android:textAlignment="center"
                        android:layout_gravity="center_horizontal"
                        android:padding="4dp"
                        android:textSize="12sp"
                        />

                </LinearLayout>
<LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/deaths"
                        android:padding="4dp"
                        android:textSize="15sp"
                        android:textAlignment="center"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/number_of_deaths"
                        android:textColor="@color/red"
                        android:textAlignment="center"
                        android:id="@+id/idTVindiaDeaths"
                        android:layout_gravity="center_horizontal"
                        android:padding="4dp"
                        android:textSize="12sp"
                        />

                </LinearLayout>

            </LinearLayout>


        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/idRVstates"/>




</LinearLayout>